  thanks to Julian Hornich.
  + HWLOC_BUILD_SHARED_LIBS is removed in favor of BUILD_SHARED_LIBS.
* The FAQ "How do I find the local MCDRAM NUMA node on Intel Xeon Phi
  processor?" is replaced with "How do I find the local HBM NUMA node
  on heterogeneous memory systems?"
* Drop support for Windows before 7 or Server 2008 R2.
* hwloc-patch now has a --dry-run option.


Version 2.12.2
--------------
* Fix hwloc-gather-topology failure because of MemoryModules when
  running as root. Thanks to Andrew Phelps for the report.
* Fix HWLOC_LOCAL_NUMANODE_FLAG_INTERSECT_LOCALITY for empty input
  cpuset, thanks to Hadrien Grasland.
* Fix hwloc_distances_get_by_name() for distances with no kinds.
  Thanks to Hadrien Grasland.
* Initialize distances grouping configuration for duplicated topology.
  Thanks to Hadrien Grasland.
* Improve Windows CMake build to support ARM64, thanks to Chiwen Hui.


Version 2.12.1
--------------
* Add hwloc-calc's --default-nodes option to hwloc-bind and hwloc-info.
* Improve the --best-memattr "default" fallback, try to use "default"
  memory nodes, and add verbose messages and warnings if some
  performance info are incomplete or missing.
  Thanks to Antoine Morvan for the report.
* Fix CPU and memory binding on different locations,
  thanks to Antoine Morvan for the report.
* Add HWLOC_LOCAL_NUMANODE_FLAG_INTERSECT_LOCALITY and enable it by
  default in hwloc-calc --local-memory for finding local NUMA nodes
  that do not exactly match input locations.
  Thanks to Antoine Morvan for the report.
* Fix a possible crash in the x86 backend when Qemu is configured to
  expose multicore/thread CPUs that are actually single-core/thread.
  Thanks to Georg Pfuetzenreuter.


Version 2.12.0
--------------
* Add hwloc_topology_get_default_nodeset() for the set of default
  NUMA nodes.
  - hwloc-calc now has --default-nodes option.
* Rework oneAPI LevelZero support to use zesInit() and avoid the need
  to set ZES_ENABLE_SYSMAN=1 in the environment.